--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-.leaflet-container {
-    height: 400px;
+#leaflet-container {
+    height: 600px;
     width: 100%;
 }
