--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,13 @@
-.App {
-  text-align: center;
+.pinpoint__input {
+  background: rgba(255, 255, 255, .7);
+  border-radius: 2px;
+  bottom: 10px;
+  left: 10px;
+  padding: 10px;
+  position: absolute;
+  z-index: 1000;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.pinpoint__input input {
+  display: block;
 }
