--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   font-family: sans-serif;
 }
 #leaflet-container {
-    height: 600px;
-    width: 100%;
+	position: relative;
+  height: 600px;
+  width: 100%;
 }
